force-app/main/default/objects/Aircraft__c/fields/Aircraft_Status__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Status__c</fullName>
    <label>Aircraft Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Grounded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>