force-app/main/default/objects/Aircraft__c/fields/Total_Flight_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Flight_Hours__c</fullName>
    <label>Total Flight Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>