force-app/main/default/objects/Aircraft__c/validationRules/Capacity_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Capacity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Capacity__c</errorDisplayField>
    <errorMessage>Aircraft Capacity must be greater than zero.</errorMessage>
</ValidationRule>