force-app/main/default/objects/Aircraft__c/validationRules/Flight_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Flight_Hours</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Flight_Hours__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Flight_Hours__c</errorDisplayField>
    <errorMessage>Flight Hours cannot be negative.</errorMessage>
</ValidationRule>