force-app/main/default/objects/Aircraft__c/validationRules/Next_Maintenance_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Maintenance_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Last_Maintenance_Date__c)),
NOT(ISBLANK(Next_Maintenance_Date__c)),
Next_Maintenance_Date__c &lt;= Last_Maintenance_Date__c
)</errorConditionFormula>
    <errorDisplayField>Next_Maintenance_Date__c</errorDisplayField>
    <errorMessage>Next Maintenance Date must be after Last Maintenance Date.</errorMessage>
</ValidationRule>